Upgraded dependencies and migrated to Java 25